Added url links

--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
             <h2 class="place__title">Куршская коса</h2>
             <div class="place__website">
               <span class="place__url-heading">url</span>
-              <a href="#" class="place__link link">park-kosa.ru</a>
+              <a href="http://park-kosa.ru" class="place__link link"
+                >park-kosa.ru</a
+              >
             </div>
             <img
               src="./images/places_kosa.jpg"
@@ -147,7 +149,11 @@
             <h2 class="place__title">Кольский</h2>
             <div class="place__website">
               <span class="place__url-heading">url</span>
-              <a href="#" class="place__link link">National Geographic</a>
+              <a
+                href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+                class="place__link link"
+                >National Geographic</a
+              >
             </div>
             <img
               src="./images/places_kolskiy.jpg"
@@ -175,7 +181,11 @@
             <h2 class="place__title">Алтай</h2>
             <div class="place__website">
               <span class="place__url-heading">url</span>
-              <a href="#" class="place__link link">Facebook</a>
+              <a
+                href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
+                class="place__link link"
+                >Facebook</a
+              >
             </div>
             <img
               src="./images/places_altai.jpg"
@@ -203,7 +213,9 @@
             <h2 class="place__title">Зимний Байкал</h2>
             <div class="place__website">
               <span class="place__url-heading">url</span>
-              <a href="#" class="place__link link">https://vk.com/baikalmile</a>
+              <a href="https://vk.com/baikalmile" class="place__link link"
+                >https://vk.com/baikalmile</a
+              >
             </div>
             <img
               src="./images/places_baikal.jpg"
@@ -230,7 +242,9 @@
             <h2 class="place__title">Карелия</h2>
             <div class="place__website">
               <span class="place__url-heading">url</span>
-              <a href="#" class="place__link link">http://vodlozero.ru/</a>
+              <a href="http://vodlozero.ru" class="place__link link"
+                >http://vodlozero.ru/</a
+              >
             </div>
             <img
               src="./images/places_karelia.jpg"
@@ -253,7 +267,7 @@
           </article>
         </section>
 
-        <a href="#">
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala">
           <section class="cover">
             <h2 class="cover__title">До Байкала «на собаках»</h2>
             <p class="cover__subtitle">
@@ -267,19 +281,19 @@
         <nav class="footer__nav">
           <ul class="footer__nav-links">
             <li class="footer__nav-link">
-              <a href="#" class="link">Карты</a>
+              <a href="https://yandex.ru/maps" class="link">Карты</a>
             </li>
             <li class="footer__nav-link">
-              <a href="#" class="link">Погода</a>
+              <a href="https://yandex.ru/pogoda" class="link">Погода</a>
             </li>
             <li class="footer__nav-link">
-              <a href="#" class="link">Расписание</a>
+              <a href="https://rasp.yandex.ru" class="link">Расписание</a>
             </li>
             <li class="footer__nav-link">
-              <a href="#" class="link">Календарь</a>
+              <a href="https://calendar.yandex.ru" class="link">Календарь</a>
             </li>
             <li class="footer__nav-link">
-              <a href="#" class="link">Путешествия</a>
+              <a href="https://travel.yandex.ru" class="link">Путешествия</a>
             </li>
           </ul>
         </nav>
