Missing target added

--- a/index.html
+++ b/index.html
@@ -9,12 +9,23 @@
   <body class="page">
     <div class="page__container">
       <header class="header">
-        <a href="#" class="header__logo link"></a>
+        <a href="#" class="header__logo link" target="_self"></a>
         <div class="header__lang">
-          <a href="#" hreflang="ru" class="header__lang-link link link_active">
+          <a
+            href="#"
+            hreflang="ru"
+            class="header__lang-link link link_active"
+            target="_self"
+          >
             Ru</a
           >
-          <a href="#" hreflang="en-US" class="header__lang-link link">En</a>
+          <a
+            href="#"
+            hreflang="en-US"
+            class="header__lang-link link"
+            target="_self"
+            >En</a
+          >
         </div>
       </header>
       <main>
@@ -119,7 +130,10 @@
             <h2 class="place__title">Куршская коса</h2>
             <div class="place__website">
               <span class="place__url-heading">url</span>
-              <a href="http://park-kosa.ru" class="place__link link"
+              <a
+                href="http://park-kosa.ru"
+                class="place__link link"
+                target="_blank"
                 >park-kosa.ru</a
               >
             </div>
@@ -152,6 +166,7 @@
               <a
                 href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
                 class="place__link link"
+                target="_blank"
                 >National Geographic</a
               >
             </div>
@@ -184,6 +199,7 @@
               <a
                 href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
                 class="place__link link"
+                target="_blank"
                 >Facebook</a
               >
             </div>
@@ -213,7 +229,10 @@
             <h2 class="place__title">Зимний Байкал</h2>
             <div class="place__website">
               <span class="place__url-heading">url</span>
-              <a href="https://vk.com/baikalmile" class="place__link link"
+              <a
+                href="https://vk.com/baikalmile"
+                class="place__link link"
+                target="_blank"
                 >https://vk.com/baikalmile</a
               >
             </div>
@@ -242,7 +261,10 @@
             <h2 class="place__title">Карелия</h2>
             <div class="place__website">
               <span class="place__url-heading">url</span>
-              <a href="http://vodlozero.ru" class="place__link link"
+              <a
+                href="http://vodlozero.ru"
+                class="place__link link"
+                target="_blank"
                 >http://vodlozero.ru/</a
               >
             </div>
@@ -267,7 +289,10 @@
           </article>
         </section>
 
-        <a href="https://stampsy.com/na-elektrichkakh-do-baikala">
+        <a
+          href="https://stampsy.com/na-elektrichkakh-do-baikala"
+          target="_blank"
+        >
           <section class="cover">
             <h2 class="cover__title">До Байкала «на собаках»</h2>
             <p class="cover__subtitle">
@@ -281,19 +306,29 @@
         <nav class="footer__nav">
           <ul class="footer__nav-links">
             <li class="footer__nav-link">
-              <a href="https://yandex.ru/maps" class="link">Карты</a>
+              <a href="https://yandex.ru/maps" class="link" target="_blank"
+                >Карты</a
+              >
             </li>
             <li class="footer__nav-link">
-              <a href="https://yandex.ru/pogoda" class="link">Погода</a>
+              <a href="https://yandex.ru/pogoda" class="link" target="_blank"
+                >Погода</a
+              >
             </li>
             <li class="footer__nav-link">
-              <a href="https://rasp.yandex.ru" class="link">Расписание</a>
+              <a href="https://rasp.yandex.ru" class="link" target="_blank"
+                >Расписание</a
+              >
             </li>
             <li class="footer__nav-link">
-              <a href="https://calendar.yandex.ru" class="link">Календарь</a>
+              <a href="https://calendar.yandex.ru" class="link" target="_blank"
+                >Календарь</a
+              >
             </li>
             <li class="footer__nav-link">
-              <a href="https://travel.yandex.ru" class="link">Путешествия</a>
+              <a href="https://travel.yandex.ru" class="link" target="_blank"
+                >Путешествия</a
+              >
             </li>
           </ul>
         </nav>
