Fixed based criteria

--- a/index.html
+++ b/index.html
@@ -289,18 +289,19 @@
           </article>
         </section>
 
-        <a
-          href="https://stampsy.com/na-elektrichkakh-do-baikala"
-          target="_blank"
-        >
-          <section class="cover">
+        <section class="cover">
+          <a
+            href="https://stampsy.com/na-elektrichkakh-do-baikala"
+            target="_blank"
+            class="cover__background"
+          >
             <h2 class="cover__title">До Байкала «на собаках»</h2>
             <p class="cover__subtitle">
               По мотивам учебной темы о Транссибе — путешествие от столицы до
               Байкала на электричках
             </p>
-          </section>
-        </a>
+          </a>
+        </section>
       </main>
       <footer class="footer">
         <nav class="footer__nav">
