--- a/index.html
+++ b/index.html
@@ -10,23 +10,20 @@
     <div class="page__container">
       <header class="header">
         <a href="#" class="header__logo link" target="_self"></a>
-        <div class="header__lang">
-          <a
-            href="#"
-            hreflang="ru"
-            class="header__lang-link link link_active"
-            target="_self"
-          >
-            Ru</a
-          >
-          <a
-            href="#"
-            hreflang="en-US"
-            class="header__lang-link link"
-            target="_self"
-            >En</a
-          >
-        </div>
+        <ul class="header__lang">
+          <li>
+            <a
+              href="#"
+              class="header__lang-link header__lang-link_active link"
+              target="_self"
+            >
+              Ru</a
+            >
+          </li>
+          <li>
+            <a href="#" class="header__lang-link link" target="_self">En</a>
+          </li>
+        </ul>
       </header>
       <main>
         <section class="lead">
@@ -34,8 +31,14 @@
           <p class="lead__subtitle">
             Настоящая страна не в выпусках новостей, а здесь.
           </p>
-          <div class="lead__image"></div>
-          <p class="lead__caption">ваша полка — верхняя</p>
+          <figure class="lead__image-container">
+            <img
+              class="lead__image"
+              src="./images/lead__image.jpg"
+              alt="Боковая полка плацкарта"
+            />
+            <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+          </figure>
         </section>
         <section class="intro">
           <h2 class="intro__title">Чего мы там не видели?</h2>
@@ -52,15 +55,27 @@
             вашего отпуска.
           </p>
           <ul class="intro__list">
-            <li class="intro__list-item"><b>Часовых поясов</b> 11</li>
             <li class="intro__list-item">
-              <b>Объектов природного наследия ЮНЕСКО</b> 12
+              <span class="intro__accent">Часовых поясов</span> 11
             </li>
             <li class="intro__list-item">
-              <b>Объектов культурного наследия ЮНЕСКО</b> 16
+              <span class="intro__accent"
+                >Объектов природного наследия ЮНЕСКО</span
+              >
+              12
             </li>
-            <li class="intro__list-item"><b>Природных заповедников</b> 105</li>
-            <li class="intro__list-item"><b>Аэропортов</b> 241</li>
+            <li class="intro__list-item">
+              <span class="intro__accent"
+                >Объектов культурного наследия ЮНЕСКО</span
+              >
+              16
+            </li>
+            <li class="intro__list-item">
+              <span class="intro__accent">Природных заповедников</span> 105
+            </li>
+            <li class="intro__list-item">
+              <span class="intro__accent">Аэропортов</span> 241
+            </li>
           </ul>
         </section>
         <section class="photo-grid">
@@ -333,7 +348,7 @@
             </li>
           </ul>
         </nav>
-        <div class="footer__copyright">© 2021. Павел Коваленко</div>
+        <p class="footer__copyright">© 2021. Павел Коваленко</p>
       </footer>
     </div>
   </body>
